# universal-crossref-mcp

./: # 🔗 **Cross-Reference Documentation Sys.md  .gitignore  ASYNC_PDF_STATUS.md  CURSOR_SETUP.md  LICENSE  PDF_EXTRACTION_STATUS.md  README.md  alembic.ini  check_test_results.py  create_sqlite_db.py  cursor-mcp-config.example.json  cursor-mcp-config.json  cursor-settings.json  ecosystem.config.example.js  env.example  example-cursor-settings.json  guide.md  pyproject.toml  quick_demo.py  quick_test.py  requirements.txt  run_server.py  setup.py  simple_test.py  sref123  sync_test.py  test_complete_extraction.py  test_db.py  test_mcp.py  test_pdf_extraction.py  test_pdf_extraction_fixes.py  test_pdf_manual.py  test_simple_extraction.py
TheUniversalOne1926WalterRussell_extracted/: TheUniversalOne1926WalterRussell_index.md  theuniversalone1926walterrussell_chapter_01.md  theuniversalone1926walterrussell_chapter_02.md  theuniversalone1926walterrussell_chapter_03.md  theuniversalone1926walterrussell_chapter_04.md  theuniversalone1926walterrussell_chapter_05.md  theuniversalone1926walterrussell_chapter_06.md  theuniversalone1926walterrussell_chapter_07.md  theuniversalone1926walterrussell_chapter_08.md  theuniversalone1926walterrussell_chapter_09.md  theuniversalone1926walterrussell_chapter_10.md  theuniversalone1926walterrussell_chapter_11.md  theuniversalone1926walterrussell_chapter_12.md  theuniversalone1926walterrussell_chapter_13.md  theuniversalone1926walterrussell_chapter_14.md  theuniversalone1926walterrussell_chapter_15.md
config/: default.yaml
docs/: README.md
examples/: README.md  analysis_demo.py  scanner_demo.py
migrations/: env.py
src/: __init__.py
src/analyzer/: __init__.py  content_analyzer.py  pattern_detector.py  relationship_detector.py
src/database/: __init__.py  connection.py  init_db.py  models.py  operations.py
src/mcp_server/: __init__.py  server.py  simple_server.py
src/scanner/: __init__.py  (+3 more)
tests/: __init__.py
(+2 files in other folders)
